# WFR-Architecture

./: .gitignore  README.md  pyproject.toml  wfr_lm.py  wfr_rfp.py
.cursor/rules/: wfr-agent-continuous-manifest.mdc
data/hf/: README.md  download_wikitext2.py
docs/: 00-overview.md  01-introduction.md  02-architecture.md  03-theory.md  04-comparison.md  05-roadmap.md  06-visualizer.md  07-experiment-plan.md  08-phase-0-plan.md  09-memory-complexity-test-plan.md  10-phase-1-plan.md  11-rfp-v0-spec.md  12-wfr-llm-breakthrough-roadmap.md  13-project-status-snapshot.md  14-core-readiness-and-breakthrough-matrix.md  16-next-phases-verified.md  17-agent-continuous-work-manifest.md  18-agent-task-p3-d1-longcontext.md  19-autonomous-research-agent-branch-a.md  README.md  strategy-fractal-layers.md
experiments/00-smoke-test/: README.md  parameter_search.py  phase0_best_config.py  run_smoke_test.py  wfr_core.py
experiments/01-memory-complexity-test/: README.md  run_memory_test.py
experiments/02-layer-scaling-test/: README.md  run_layer_scaling_test.py
experiments/03-long-context-stability/: README.md  run_stability_test.py
experiments/03-memory-complexity-test/: run_memory_test.py
experiments/04-basic-pattern-formation/: README.md  run_pattern_test.py
experiments/04-layer-scaling-test/: README.md  run_layer_scaling_test.py
experiments/05-rfp-training-sanity/: README.md  phase1_checks.py  run_full_training.py  run_training_sanity.py  wfr_losses.py
experiments/06-llm-trainability/: README.md  run_train_token_lm.py
wfr/: __init__.py  core.py  losses.py
(+353 files in other folders)
